force-app/main/default/objects/EBI_API_Setting__c/EBI_API_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>EBI API  Connection details</description>
    <label>EBI API Setting</label>
</CustomObject>