force-app/main/default/objects/EBI_API_Setting__c/fields/EBI_AccountC__c.field-meta.xml
<CustomField>
    <fullName>EBI_AccountC__c</fullName>
    <description>EBI Account Construction Loan Monitoring</description>
    <inlineHelpText>EBI Account Construction Loan Monitoring</inlineHelpText>
    <label>EBI_AccountC</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>