force-app/main/default/objects/EBI_API_Setting__c/fields/EBI_AccountT__c.field-meta.xml
<CustomField>
    <fullName>EBI_AccountT__c</fullName>
    <description>EBI Account Traditional Payload</description>
    <inlineHelpText>EBI Account Traditional Payload</inlineHelpText>
    <label>EBI AccountT</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>