force-app/main/default/objects/EBI_API_Setting__c/fields/EBI_API_KeyC__c.field-meta.xml
<CustomField>
    <fullName>EBI_API_KeyC__c</fullName>
    <description>EBI API Key Construction</description>
    <inlineHelpText>EBI API Key Construction</inlineHelpText>
    <label>EBI API KeyC</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>