force-app/main/default/objects/EBI_API_Setting__c/fields/EBI_API_KeyT__c.field-meta.xml
<CustomField>
    <fullName>EBI_API_KeyT__c</fullName>
    <description>EBI API Key Traditional</description>
    <inlineHelpText>EBI API Key Traditional</inlineHelpText>
    <label>EBI API KeyT</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>