force-app/main/default/objects/EBI_API_Setting__c/fields/EBI_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EBI_EndPoint__c</fullName>
    <description>EBI EndPoint</description>
    <inlineHelpText>EBI End Point URL</inlineHelpText>
    <label>EBI EndPoint</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>